--- a/views/newsletter.handlebars
+++ b/views/newsletter.handlebars
@@ -1,20 +1,44 @@
-<h2>Meadowlark Travel Newsletter</h2>
+<h2>Vacation Photo Contest</h2>
 
-<div id="newsletterSignupFormContainer">
-  <form class="form-horizontal" role="form" id="newsletterSignupForm">
-    <input type="hidden" name="_csrf" value="{{csrf}}">
+<div id="vacationPhotoContestFormContainer">
+  <form
+    class="form-horizontal"
+    role="form"
+    id="vacationPhotoContestForm"
+    enctype="multipart/form-data"
+    method="POST"
+    action="/contest/vacation-photo/{{year}}/{{month}}"
+  >
+    <input type="hidden" name="_csrf" value="{{csrf}}" />
     <div class="form-group">
       <label for="fieldName" class="col-sm-2 control-label">Name</label>
       <div class="col-sm-4">
-        <input type="text" class="form-control" 
-        id="fieldName" name="name">
+        <input type="text" class="form-control" id="fieldName" name="name" />
       </div>
     </div>
     <div class="form-group">
       <label for="fieldEmail" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-4">
-        <input type="email" class="form-control" required 
-            id="fieldEmail" name="email">
+        <input
+          type="email"
+          class="form-control"
+          required
+          id="fieldEmail"
+          name="email"
+        />
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="fieldPhoto" class="col-sm-2 control-label">Vacation photo</label>
+      <div class="col-sm-4">
+        <input
+          type="file"
+          class="form-control"
+          required
+          accept="image/*"
+          id="fieldPhoto"
+          name="photo"
+        />
       </div>
     </div>
     <div class="form-group">
@@ -25,33 +49,19 @@
   </form>
 </div>
 
-{{#section 'scripts'}}
-<script>
-  document.getElementById('newsletterSignupForm')
-    .addEventListener('submit', evt => {
-      evt.preventDefault()
-      const form = evt.target
-      const body = JSON.stringify({
-        _csrf: form.elements._csrf.value,
-        name: form.elements.name.value,
-        email: form.elements.email.value,
-      })
-      const headers = { 'Content-Type': 'application/json' }
-      const container =
-        document.getElementById('newsletterSignupFormContainer')
-      fetch('/api/newsletter-signup', { method: 'post', body, headers })
-        .then(resp => {
-          if(resp.status < 200 || resp.status >= 300)
-            throw new Error(`Request failed with status ${resp.status}`)
-          return resp.json()
-        })
-        .then(json => {
-          container.innerHTML = '<b>Thank you for signing up!</b>'
-        })
-        .catch(err => {
-          container.innerHTML = `<b>We're sorry, we had a problem ` +
-            `signing you up.  Please <a href="/newsletter">try again</a>`
-        })
-  })
-</script>
+{{#section "scripts"}}
+  <script>
+    document.getElementById('vacationPhotoContestForm')
+    .addEventListener('submit', evt => { evt.preventDefault() const body = new
+    FormData(evt.target) const container =
+    document.getElementById('vacationPhotoContestFormContainer')
+    fetch('/api/vacation-photo-contest/{{year}}/{{month}}', { method: 'post',
+    body }) .then(resp => { if(resp.status < 200 || resp.status >= 300) throw
+    new Error(`Request failed with status ${resp.status}`) return resp.json() })
+    .then(json => { container.innerHTML = '<b>Thank you for submitting your
+    photo!</b>' }) .catch(err => { container.innerHTML = `<b>We're sorry, we had
+    a problem processing ` + `your submission. Please <a href="/newsletter">try
+    again</a>` }) })
+  </script>
+
 {{/section}}
